Fix for footer overlaps

--- a/frontend/src/styles/cart/cartPage.css
+++ b/frontend/src/styles/cart/cartPage.css
@@ -4,6 +4,7 @@
 }
 
 .cart-page-main-container {
+	height: 93vh;
 	display: grid;
 	grid-template-columns: 2fr 1fr;
 	column-gap: 35px;
